WiseUpTi-SalesForce/Wise Up Sales Force/src/objects/Template_Article__c.object
<CustomObject>
    <fields>
        <fullName>Article__c</fullName>
        <label>Article</label>
        <referenceTo>Article__c</referenceTo>
        <relationshipLabel>Template Article</relationshipLabel>
        <relationshipName>Articles_Template</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Can_be_changed__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If marked, when inserted in a contract, can be changed</inlineHelpText>
        <label>Can be changed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Can_be_removed__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If marked, when inserted in a contract, can be removed from the contract</inlineHelpText>
        <label>Can be removed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contract_Template__c</fullName>
        <label>Contract Template</label>
        <referenceTo>Contract_Template__c</referenceTo>
        <relationshipLabel>Template Article</relationshipLabel>
        <relationshipName>Template_Articles</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Article__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Article</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Template_Article__c.Contract_Template__c</field>
                <operation>equals</operation>
                <valueField>$Source.Contract_Template__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Template_Article__c</referenceTo>
        <relationshipLabel>Template Article</relationshipLabel>
        <relationshipName>Template_Article</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Template Article</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Template x Article Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Templates Article</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>